--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/parth10811/project12.git",
   "name": "weather-app-react",
   "version": "0.1.0",
   "private": true,
